# lomiri-telephony-service

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README.md  clickable.json  config.h.in
Lomiri/Telephony/: CMakeLists.txt  components.cpp  components.h  conversationfeeditem.cpp  conversationfeeditem.h  participantsmodel.cpp  participantsmodel.h  presencerequest.cpp  presencerequest.h  qmldir.in
Lomiri/Telephony/PhoneNumber/: CMakeLists.txt  PhoneNumber.js  PhoneNumberField.qml  PhoneNumberInput.qml  asyoutypeformatter.cpp  asyoutypeformatter.h  phonenumber.cpp  phonenumber.h  phoneutils.cpp  phoneutils.h  qmldir
accounts/common/: DynamicField.qml  Main.qml  NewAccountInterface.qml
approver/: 50-com.lomiri.TelephonyServiceApprover.pkla  Approver.xml  CMakeLists.txt  approver.cpp  approver.h  approverdbus.cpp  approverdbus.h  com.lomiri.TelephonyServiceApprover.policy  com.lomiri.TelephonyServiceApprover.xml  main.cpp  org.freedesktop.Telepathy.Client.TelephonyServiceApprover.service.in
cmake/modules/: GenerateTest.cmake
debian/: changelog  control  lomiri-telephony-service.install  lomiri-telephony-service.lomiri-indicator-telephony-service.user.service  lomiri-telephony-service.lomiri-telephony-service-approver.user.service  lomiri-telephony-service.migrations  lomiri-telephony-service.postrm  qml-module-lomiri-telephony-phonenumber0.1.install  qml-module-lomiri-telephony0.1.install  rules  telephony-service.install  telephony-service.telephony-service-approver.user.service  telephony-service.telephony-service-indicator.user.service
debian/session-migrations/: lomiri-telephony-service-greeter-data-migration.sh
handler/: CMakeLists.txt  ChatStartingJob.xml  Handler.xml  MessageSendingJob.xml  accountproperties.cpp  accountproperties.h  audioroutemanager.cpp  audioroutemanager.h  callagent.cpp  callagent.h  callhandler.cpp  callhandler.h  chatstartingjob.cpp  chatstartingjob.h  com.lomiri.TelephonyServiceHandler.service.in  farstreamchannel.cpp  farstreamchannel.h  handler.cpp  handler.h  handlerdbus.cpp  handlerdbus.h  main.cpp  messagejob.cpp  messagejob.h  messagesendingjob.cpp  messagesendingjob.h  org.freedesktop.Telepathy.Client.TelephonyServiceHandler.service.in  powerddbus.cpp  texthandler.cpp  texthandler.h
indicator/: CMakeLists.txt  Indicator.xml  authhandler.cpp  authhandler.h  callchannelobserver.cpp  callchannelobserver.h  displaynamesettings.cpp  displaynamesettings.h  indicatordbus.cpp  indicatordbus.h  lomiri-telephony-service-call.desktop.in  lomiri-telephony-service-sms.desktop.in  main.cpp  messagingmenu.cpp  messagingmenu.h  metrics.cpp  metrics.h  org.freedesktop.Telepathy.Client.TelephonyServiceIndicator.service.in  telephony-service-call.desktop.in  telephony-service-sms.desktop.in  textchannelobserver.cpp  textchannelobserver.h  ussdindicator.cpp  ussdindicator.h  voicemailindicator.cpp  voicemailindicator.h
liblomiritelephonyservice/: CMakeLists.txt  accountentry.cpp  accountentry.h  accountentryfactory.cpp  accountentryfactory.h  accountlist.cpp  accountlist.h  applicationutils.cpp  applicationutils.h  audiooutput.cpp  audiooutput.h  callentry.cpp  callentry.h  callmanager.cpp  callmanager.h  callnotification.cpp  callnotification.h  channelobserver.cpp  channelobserver.h  chatentry.cpp  chatentry.h  chatmanager.cpp  chatmanager.h  contactemailaddress.cpp  contactemailaddress.h  contactutils.cpp  contactutils.h  contactwatcher.cpp  contactwatcher.h  greetercontacts.cpp  greetercontacts.h  ofonoaccountentry.cpp  ofonoaccountentry.h  participant.cpp  participant.h  phoneutils.cpp  phoneutils.h  protocol.cpp  protocol.h  protocolmanager.cpp  (+11 more)
liblomiritelephonyservice/include/: cellbroadcast-types.h
libtelephonyservice/: accountentry.cpp  accountlist.h  applicationutils.cpp  callmanager.cpp  callmanager.h  callnotification.cpp  chatentry.cpp  contactwatcher.cpp  greetercontacts.cpp  greetercontacts.h  ofonoaccountentry.cpp  protocol.h  ringtone.cpp  ringtone.h  telepathyhelper.cpp  telepathyhelper.h  ussdmanager.cpp
libtelephonyservice/include/: cellbroadcast-types.h
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  (+115 more)
protocols/: README.protocols  ofono.protocol  sip.protocol
tests/: CMakeLists.txt
tests/Lomiri.Telephony/: CMakeLists.txt  ContactWatcherTest.cpp  PresenceRequestTest.cpp  tst_PhoneNumberData.js  tst_PhoneNumberField.qml  tst_PhoneNumberInput.qml  tst_PhoneNumberPhoneUtils.qml  tst_contextProperties.qml
tests/approver/: ApproverTest.cpp  CMakeLists.txt  approvercontroller.cpp
tests/common/: CMakeLists.txt  NotificationsMock.cpp  mockcontroller.cpp  telepathytest.cpp  telepathytest.h
tests/handler/: CMakeLists.txt  HandlerTest.cpp  handlercontroller.cpp
tests/indicator/: AuthHandlerTest.cpp  CMakeLists.txt  MessagingMenuTest.cpp  NotificationMenuTest.cpp  messagingmenumock.cpp  (+1 more)
tools/: CMakeLists.txt  ofono-setup  ofono-setup.in  phone-gsettings-migration.py
(+42 files in other folders)
